--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -123,7 +123,7 @@
 <script type="text/javascript">
 	
 $(".icon").on("click",function(){
-  $(".navbar").removeClass(".navbar .navbar--closed");
+  $(".navbar .navbar--closed").removeClass(".navbar .navbar--closed");
   $(this).addClass(".navbar .navbar--open");
 });
 
